--- a/1/index.html
+++ b/1/index.html
@@ -13,8 +13,8 @@
         padding: 30px;
         width: 100vw;
         height: 100vh;
-        background-image: url("./beer_bg_02.jpg");
-        background-color: rgba(0, 0, 0, 0.722);
+        background-image: url("../beer_bg_02.jpg");
+        background-color: rgba(0, 0, 0, 0.7);
         background-position: center;
         background-size: cover;
         background-blend-mode: multiply;
