--- a/1/index.html
+++ b/1/index.html
@@ -46,11 +46,12 @@
         font-size: 55px;
         line-height: 0px;
         margin-top: 30px;
-        margin-bottom: 50px;
+        margin-bottom: 60px;
       }
       .beer-info p {
         color: white;
-        font-size: 27px;
+        font-weight: 600;
+        font-size: 35px;
         line-height: 10px;
       }
     </style>
