--- a/2/index.html
+++ b/2/index.html
@@ -46,11 +46,12 @@
         font-size: 55px;
         line-height: 0px;
         margin-top: 30px;
-        margin-bottom: 50px;
+        margin-bottom: 60px;
       }
       .beer-info p {
         color: white;
-        font-size: 27px;
+        font-weight: 600;
+        font-size: 35px;
         line-height: 10px;
       }
     </style>
@@ -72,7 +73,7 @@
         <!-- 2번 -->
         <div class="beer-box">
           <div class="beer-img">
-            <img src="../img/05.png" alt="" />
+            <img src="../img/13.jpg" alt="" />
           </div>
           <div class="beer-info">
             <h4>Bishop Crack Berry</h4>
@@ -85,23 +86,23 @@
         <!-- 3번 -->
         <div class="beer-box">
           <div class="beer-img">
-            <img src="../img/02.jpeg" alt="" />
+            <img src="../img/11.jpeg" alt="" />
           </div>
           <div class="beer-info">
-            <h4>Michelob ULTRA</h4>
-            <p>Lager - American Light, 4.2% ABV, 10.0 IBU</p>
-            <p>St.Louis, MO</p>
+            <h4>Mosaic IPA</h4>
+            <p>IPA - American, 8.6% ABV, 85.0 IBU</p>
+            <p>Dallas, TX</p>
           </div>
         </div>
         <!-- 4번 -->
         <div class="beer-box">
           <div class="beer-img">
-            <img src="../img/06.png" alt="" />
+            <img src="../img/CERVEZA-ESPECIAL.png" alt="" />
           </div>
           <div class="beer-info">
-            <h4>Hopadillo IPA</h4>
-            <p>IPA - American, 6.6% ABV, 65.0 IBU</p>
-            <p>Houston, TX</p>
+            <h4>Cerveza Especial</h4>
+            <p>Lager - Mexican, 4.5% ABV, 18.0 IBU</p>
+            <p>Mazatlán, Sinaloa</p>
           </div>
         </div>
       </div>
@@ -109,23 +110,23 @@
         <!-- 5번 -->
         <div class="beer-box">
           <div class="beer-img">
-            <img src="../img/03.png" alt="" />
+            <img src="../img/13.jpeg" alt="" />
           </div>
           <div class="beer-info">
-            <h4>Billy Jenkins Bock</h4>
-            <p>Bock - Single, 5.2% ABV, 15.0 IBU</p>
-            <p>Fort Worth, TX</p>
+            <h4>Honey Citrus Blonde</h4>
+            <p>Blonde Ale, 6.0% ABV, 25.0 IBU</p>
+            <p>Dallas, TX</p>
           </div>
         </div>
         <!-- 6번 -->
         <div class="beer-box">
           <div class="beer-img">
-            <img src="../img/07.jpeg" alt="" />
+            <img src="../img/15.png" alt="" />
           </div>
           <div class="beer-info">
-            <h4>Dallas Blonde®</h4>
-            <p>Blonde Ale, 5.2% ABV, 23.0 IBU</p>
-            <p>Dallas, TX</p>
+            <h4>Estrella Jalisco</h4>
+            <p>Lager - Pale, 4.5% ABV</p>
+            <p>St. Louis, MO</p>
           </div>
         </div>
       </div>
@@ -137,19 +138,19 @@
           </div>
           <div class="beer-info">
             <h4 style="letter-spacing: -2px">Bishop Apple Pineapple</h4>
-            <p>Golden Ale - American, 4.4% ABV, 21.0 IBU</p>
-            <p>Kailua-Kona, HI</p>
+            <p>Cider - Other Fruit, 5.0% ABV</p>
+            <p>Dallas, TX</p>
           </div>
         </div>
         <!-- 8번 -->
         <div class="beer-box">
           <div class="beer-img">
-            <img src="../img/08.jpeg" alt="" />
+            <img src="../img/16.jpeg" alt="" />
           </div>
           <div class="beer-info">
             <h4 style="letter-spacing: -5px">Saint Arnold:Banger IPA</h4>
-            <p>IPA - American, 7.0% ABV, 70.0 IBU</p>
-            <p>Dallas, TX</p>
+            <p>IPA - Imperial, 8.4% ABV, 29.0 IBU</p>
+            <p>Houston, TX</p>
           </div>
         </div>
       </div>
