--- a/2/index.html
+++ b/2/index.html
@@ -137,7 +137,7 @@
             <img src="../img/04.jpeg" alt="" />
           </div>
           <div class="beer-info">
-            <h4 style="letter-spacing: -2px">Bishop Apple Pineapple</h4>
+            <h4>Bishop Apple Pineapple</h4>
             <p>Cider - Other Fruit, 5.0% ABV</p>
             <p>Dallas, TX</p>
           </div>
@@ -148,7 +148,7 @@
             <img src="../img/16.jpeg" alt="" />
           </div>
           <div class="beer-info">
-            <h4 style="letter-spacing: -5px">Saint Arnold:Banger IPA</h4>
+            <h4>Saint Arnold:Banger IPA</h4>
             <p>IPA - Imperial, 8.4% ABV, 29.0 IBU</p>
             <p>Houston, TX</p>
           </div>
