--- a/2/index.html
+++ b/2/index.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
       .container {
-        padding: 30px;
+        padding: 60px 30px 30px 30px;
         width: 100vw;
         height: 100vh;
         background-image: url("../beer_bg_02.jpg");
@@ -24,7 +24,7 @@
       .beer-wrap {
         display: flex;
         flex-direction: row;
-        height: 24vh;
+        height: 23.5vh;
       }
       .beer-box {
         display: flex;
