--- a/1/index.html
+++ b/1/index.html
@@ -3,61 +3,131 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pizza Press Irving</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@700&family=Roboto+Condensed:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         margin: 0;
         padding: 0;
+        height: 100vh;
+        width: 100vw;
       }
+      /* * {
+        margin: 0;
+        padding: 0;
+        color: #fff;
+        overflow: hidden;
+      } */
+
+      body {
+        position: relative;
+
+        background-image: url('../beer_bg_02.jpg');
+        background-color: rgba(0, 0, 0, 0.65);
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-blend-mode: multiply;
+        box-sizing: border-box;
+      }
+
       .container {
-        padding: 60px 60px 30px 60px;
+        position: absolute;
+        top: 0;
+        padding: 30px 30px 30px 30px;
         width: 100vw;
         height: 100vh;
-        background-image: url("../beer_bg_02.jpg");
+        box-sizing: border-box;
+        /* z-index: 100; */
+        /* background-image: url('../beer_bg_02.jpg');
         background-color: rgba(0, 0, 0, 0.7);
         background-position: center;
         background-size: cover;
         background-blend-mode: multiply;
-        box-sizing: border-box;
+        box-sizing: border-box; */
+      }
+      .filter-bg {
+        filter: blur(4px);
+        z-index: 50;
       }
 
       .beer-wrap {
         display: flex;
         flex-direction: row;
         height: 23.5vh;
+        z-index: 10;
+        width: 100%;
+        box-sizing: border-box;
       }
       .beer-box {
         display: flex;
         flex-direction: row;
         width: 50%;
+        padding: 10px;
+        box-sizing: border-box;
       }
       .beer-img img {
+        margin-top: 20px;
         width: 10vw;
       }
       .beer-info {
         /* display: flex;
         flex-direction: column;
         justify-content: left; */
+        width: 80%;
+        /* background-color: rgba(0, 0, 0, 0.436); */
         align-items: start;
-        padding-left: 20px;
+        padding: 0px;
+        margin-left: 20px;
+        box-sizing: border-box;
+        border-radius: 20px;
       }
       .beer-info h4 {
         color: rgb(255, 221, 0);
-        font-size: 55px;
-        line-height: 0px;
-        margin-top: 30px;
-        margin-bottom: 60px;
+        font-size: 65px;
+        text-shadow: 5px 5px 10px black;
+        /* line-height: 50px; */
+        margin-top: 20px;
+        margin-bottom: -10px;
+        font-family: 'Roboto Condensed', sans-serif;
       }
       .beer-info p {
         color: white;
-        font-weight: 600;
-        font-size: 30px;
+        /* font-weight: 100; */
+        font-size: 38px;
         line-height: 10px;
+        text-shadow: 3px 3px 8px black;
+        font-family: 'Roboto Condensed', sans-serif;
+      }
+      .ball {
+        position: absolute;
+        border-radius: 100%;
+        opacity: 0.2;
+        filter: blur(7px);
+        z-index: 1;
+      }
+      .oz {
+        background-color: rgb(255, 255, 255);
+        font-size: 25px;
+        font-weight: bold;
+        padding: 0px 10px 0px 10px;
+        border-radius: 10px;
+        color: rgb(0, 0, 0);
+        text-shadow: none;
+        box-sizing: border-box;
+        line-height: 50px;
+      }
+      .price {
+        font-size: 40px;
+        color: rgb(255, 221, 0);
       }
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="canvas">
       <div class="beer-wrap">
         <!-- 1번 -->
         <div class="beer-box">
@@ -156,4 +226,47 @@
       </div>
     </div>
   </body>
+  <script>
+    // Some random colors
+    const colors = ['#ffffff', '#ffffff', '#ffffff', '#ffffff', '#ffffff'];
+
+    const numBalls = 75;
+    const balls = [];
+
+    for (let i = 0; i < numBalls; i++) {
+      let ball = document.createElement('div');
+      ball.classList.add('ball');
+      ball.style.background = colors[Math.floor(Math.random() * colors.length)];
+      ball.style.left = `${Math.floor(Math.random() * 100)}vw`;
+      ball.style.top = `${Math.floor(Math.random() * 100)}vh`;
+      ball.style.transform = `scale(${Math.random()})`;
+      ball.style.width = `${Math.random()}em`;
+      ball.style.height = ball.style.width;
+
+      balls.push(ball);
+      document.body.append(ball);
+    }
+
+    // Keyframes
+    balls.forEach((el, i, ra) => {
+      let to = {
+        x: Math.random() * (i % 2 === 0 ? -11 : 11),
+        y: Math.random() * 12,
+      };
+
+      let anim = el.animate(
+        [
+          { transform: 'translate(0, 0)' },
+          { transform: `translate(${to.x}rem, ${to.y}rem)` },
+        ],
+        {
+          duration: (Math.random() + 1) * 2000, // random duration
+          direction: 'alternate',
+          fill: 'both',
+          iterations: Infinity,
+          easing: 'ease-in-out',
+        }
+      );
+    });
+  </script>
 </html>
