--- a/3/index.html
+++ b/3/index.html
@@ -16,6 +16,19 @@
     }
   </style>
   <body>
-    <div class="container" id="video"></div>
+    <video autoPlay muted loop class="container" id="video">
+        <source src="./salad.mp4" type="video/mp4" />
+            </video>
+    </video>
+    <script>
+        var isplayavideo = 0;
+
+$('body').on('touchstart',function(){
+    if (document.getElementById("video").paused) {
+    document.getElementById("video").play();
+        isplayavideo = 1; 
+    }
+});
+    </script>
   </body>
 </html>
