--- a/3/index.html
+++ b/3/index.html
@@ -16,19 +16,18 @@
     }
   </style>
   <body>
-    <video autoPlay muted loop class="container" id="video">
-        <source src="./salad.mp4" type="video/mp4" />
-            </video>
+    <video autoplay muted loop class="container" id="video">
+      <source src="./salad.mp4" type="video/mp4" />
     </video>
     <script>
-        var isplayavideo = 0;
+      var isplayavideo = 0;
 
-$('body').on('touchstart',function(){
-    if (document.getElementById("video").paused) {
-    document.getElementById("video").play();
-        isplayavideo = 1; 
-    }
-});
+      $("body").on("touchstart", function () {
+        if (document.getElementById("video").paused) {
+          document.getElementById("video").play();
+          isplayavideo = 1;
+        }
+      });
     </script>
   </body>
 </html>
