--- a/3/index.html
+++ b/3/index.html
@@ -18,6 +18,8 @@
     body {
       margin: 0;
       padding: 0;
+      overflow-x: hidden;
+      overflow-y: hidden;
     }
     .container {
       width: 100vw;
