--- a/3/index.html
+++ b/3/index.html
@@ -16,6 +16,7 @@
       scrollbar-width: none; /* 파이어폭스 */
     }
     body {
+      cursor: none;
       margin: 0;
       padding: 0;
       overflow-x: hidden;
